Test Org - Speridian/src/objects/BA_Quote_Line_Census__c.object
<CustomObject>
    <fields>
        <fullName>Quote_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Line Census</relationshipLabel>
        <relationshipName>Quote_Line_Census</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ba_Age__c</fullName>
        <formula>((TODAY()-ba_MemberDOB__c )/365.25)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ba_CensusEffectiveDate__c</fullName>
        <label>Census Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_CensusTerminationDate__c</fullName>
        <label>Census Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_EmployeeNumber__c</fullName>
        <label>Employee Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_FamilyRate__c</fullName>
        <label>Family Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ba_MemberDOB__c</fullName>
        <label>Date Of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_MemberGender__c</fullName>
        <label>Gender</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Member__c</fullName>
        <label>Member Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Relation__c</fullName>
        <label>Relation</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Dependent</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Tobbacco_Usage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tobbacco Usage</label>
        <type>Checkbox</type>
    </fields>
    <label>Quote Line Census</label>
    <nameField>
        <displayFormat>QLC-ID{0000}</displayFormat>
        <label>Quote Line Census Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Line Census</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>